Add JWT authentication support with security configuration and DTOs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,10 @@ spring.jpa.defer-datasource-initialization=true
 # Creacion de valores propios - Modificacion estática
 app.pagination.size=3
 
+# JSON WEB TOKEN
+app.security.secretkey=universidadicesiuniversidadicesiuniversidadicesi
+app.security.expirationMinutes=30
+
 
 ##  ----------------  H2  CONFIG --------------
 # spring.jpa.hibernate.ddl-auto=update
