--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,5 +1,37 @@
-{"properties": [{
-  "name": "app.pagination.size",
-  "type": "java.lang.String",
-  "description": "A description for 'app.pagination.size'"
-}]}
+{"properties": [
+  {
+    "name": "app.pagination.size",
+    "type": "java.lang.String",
+    "description": "A description for 'app.pagination.size'"
+  },
+  {
+    "name": "app.security.secretkey",
+    "type": "java.lang.String",
+    "description": "A description for 'app.security.secretkey'"
+  },
+  {
+    "name": "app.security.expirationMinutes",
+    "type": "java.lang.String",
+    "description": "A description for 'app.security.expirationMinutes'"
+  },
+  {
+    "name": "app.security.expirationMinutes",
+    "type": "java.lang.String",
+    "description": "A description for 'app.security.expirationMinutes'"
+  },
+  {
+    "name": "app.security.expirationMinutes",
+    "type": "java.lang.String",
+    "description": "A description for 'app.security.expirationMinutes'"
+  },
+  {
+    "name": "app.security.expirationMinutes",
+    "type": "java.lang.String",
+    "description": "A description for 'app.security.expirationMinutes'"
+  },
+  {
+    "name": "app.security.expirationMinutes",
+    "type": "java.lang.String",
+    "description": "A description for 'app.security.expirationMinutes'"
+  }
+]}
