--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,14 +25,14 @@ app.security.expirationMinutes=30
 spring.jpa.hibernate.ddl-auto=create
 
 ## --------------- POSTGRES Credentials --------------
-# spring.datasource.url=jdbc:postgresql://localhost:5432/springboot_db 
-# spring.datasource.username=springboot
-# spring.datasource.password=springboot
+spring.datasource.url=jdbc:postgresql://localhost:5432/springboot_db 
+spring.datasource.username=springboot
+spring.datasource.password=springboot
 
 ## ---------------  NEON Credentials ------------------
-spring.datasource.url=jdbc:postgresql://ep-sweet-frost-a5etfzb2-pooler.us-east-2.aws.neon.tech/springboot_db 
-spring.datasource.username=springboot_db_owner
-spring.datasource.password=npg_pFuG5v6snqyz
+# spring.datasource.url=jdbc:postgresql://ep-sweet-frost-a5etfzb2-pooler.us-east-2.aws.neon.tech/springboot_db 
+# spring.datasource.username=springboot_db_owner
+# spring.datasource.password=npg_pFuG5v6snqyz
 
 spring.datasource.hikari.maximum-pool-size=20
 spring.datasource.driver-class-name=org.postgresql.Driver
