Enhance enrollment and student management: add delete enrollment endpoint, update student details, and implement course retrieval by student ID

--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -33,5 +33,15 @@
     "name": "app.security.expirationMinutes",
     "type": "java.lang.String",
     "description": "A description for 'app.security.expirationMinutes'"
+  },
+  {
+    "name": "app.security.expirationMinutes",
+    "type": "java.lang.String",
+    "description": "A description for 'app.security.expirationMinutes'"
+  },
+  {
+    "name": "app.security.expirationMinutes",
+    "type": "java.lang.String",
+    "description": "A description for 'app.security.expirationMinutes'"
   }
 ]}
