Add WebSocket support: implement WebSocket configuration and handler, update dependencies, and adjust application properties for H2 database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,21 +13,21 @@ app.security.expirationMinutes=30
 
 ##  ----------------  H2  CONFIG --------------
 # spring.jpa.hibernate.ddl-auto=update
-# spring.datasource.url=jdbc:h2:mem:testdb
-# spring.datasource.driver-class-name=org.h2.Driver
-# spring.datasource.username=sa
-# spring.datasource.password=
-# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-# spring.h2.console.enabled=true
-# spring.h2.console.path=/h2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
 
 spring.jpa.hibernate.ddl-auto=create
 
 ## --------------- POSTGRES Credentials --------------
-spring.datasource.url=jdbc:postgresql://localhost:5432/springboot_db 
-spring.datasource.username=springboot
-spring.datasource.password=springboot
+# spring.datasource.url=jdbc:postgresql://localhost:5432/springboot_db 
+# spring.datasource.username=springboot
+# spring.datasource.password=springboot
 
 ## ---------------  NEON Credentials ------------------
 # spring.datasource.url=jdbc:postgresql://ep-sweet-frost-a5etfzb2-pooler.us-east-2.aws.neon.tech/springboot_db 
@@ -35,5 +35,5 @@ spring.datasource.password=springboot
 # spring.datasource.password=npg_pFuG5v6snqyz
 
 spring.datasource.hikari.maximum-pool-size=20
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+# spring.datasource.driver-class-name=org.postgresql.Driver
+# spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
