--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,11 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<!-- Websockets -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
 
 	</dependencies>
 
